--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Marvel Avengers: All you need to know</string>
+    <string name="app_name">The Avengers: All you need to know</string>
 
     <string name="AdUnitId_sample">ca-app-pub-3940256099942544/6300978111</string>
     <string name="appId_sample">ca-app-pub-3940256099942544~3347511713</string>
